--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
@@ -3,12 +3,12 @@
 
 <div class="tabs">
     <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
-    <a ng-show="model.valintaryhma.oid" href="#/valintaryhma/{{model.valintaryhma.oid}}/laskentakaava"
+    <a href="#/valintaryhma/{{model.valintaryhma.oid}}/laskentakaava"
        class="tab"><span>Laskentakaavat</span></a>
     <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
 </div>
 <div class="tabsheets">
-
+    <breadcrumb></breadcrumb>
     <form name="form" ng-submit="submit()">
         <div class="form-row">
             <label class="form-row-label">Ylävalintaryhmä</label>
