--- a/src/main/webapp/app/valintatapajono/hakijaryhmaValintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/hakijaryhmaValintatapajono.html
@@ -6,7 +6,8 @@
     <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
 </div>
 
-        <div class="tabsheet">
+<div class="tabsheet">
+    <breadcrumb></breadcrumb>
 <form name="form" ng-submit="submit()">
 
 
