--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -1,5 +1,13 @@
 ﻿<h1>Hakijaryhman muokkaus</h1>
 
+<div class="tabs">
+    <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
+    <a ng-show="model.hakukohde" href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
+</div>
+
+        <div class="tabsheets">
+            <breadcrumb></breadcrumb>
 <form name="form" ng-submit="submit()">
 
     <div class="form-row">
@@ -103,3 +111,4 @@
 </div>
 
 </form>
+        </div>
