--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -76,13 +76,13 @@
 </div>
 
 <!-- VALINTAKOEKOODIEN LISTAUS -->
-<div class="form-row">
+<div ng-controller="ValintakoekoodiController" class="form-row">
     <label class="form-row-label" for="">Valintakoekoodit</label>
 
     <div class="row">
-        <button ng-click="showValintakoeKooditList()" class="btn btn-sm btn-default">
-            <i ng-if="toggleValintakoeKoodiList" class="fa fa-eye-slash"></i>
-            <i ng-if="!toggleValintakoeKoodiList" class="fa fa-eye"></i> Valintakoekoodit
+        <button ng-click="toggleValintakokeet()" class="btn btn-sm btn-default">
+            <i ng-if="toggleValintaryhmaValintakokeet" class="fa fa-eye-slash"></i>
+            <i ng-if="!toggleValintaryhmaValintakokeet" class="fa fa-eye"></i> Valintakoekoodit
         </button>
         <button ng-click="showValintakoeKoodit()" type="button"
                 class="btn btn-sm btn-default">
@@ -94,7 +94,7 @@
     </div>
     <label class="form-row-label"></label>
     <div class="row">
-        <table ng-if="toggleValintakoeKoodiList" class="virkailija-table-1 width-60">
+        <table ng-if="toggleValintaryhmaValintakokeet" class="virkailija-table-1 width-60">
             <thead>
             <tr>
                 <th>Koodi</th>
@@ -122,11 +122,27 @@
 
 
 <!-- HAKUKOHDEKOODIEN LISTAUS -->
-<div ng-show="model.valintaryhma.hakukohdekoodit" class="form-row">
+<div ng-controller="HakukohdekoodiController" class="form-row">
     <label class="form-row-label" for="">Hakukohdekoodit</label>
 
+    <div class="row">
+        <button class="btn btn-sm btn-default" ng-click="toggleHakukohdekoodit()">
+            <i ng-if="!toggleValintaryhmaHakukohdekoodit" class="fa fa-eye"></i>
+            <i ng-if="toggleValintaryhmaHakukohdekoodit" class="fa fa-eye-slash"></i> Hakukohdekoodit
+        </button>
+        <button ng-click="showHakukohdeKoodit()" type="button" class="btn btn-sm btn-default">
+            <i class="fa fa-plus"></i> Uusi hakukohdekoodi
+        </button>
+
+        <modal modal-template="../common/partials/hakukohdekoodinValinta.html" auth="update">
+            <modal-open></modal-open>
+        </modal>
+    </div>
+
+
+    <label class="form-row-label"></label>
     <div class="form-row-content">
-        <table class="virkailija-table-1 width-60">
+        <table ng-if="toggleValintaryhmaHakukohdekoodit" class="virkailija-table-1 width-60">
             <thead>
             <tr>
                 <th>koodi</th>
@@ -148,46 +164,6 @@
             </tbody>
 
         </table>
-    </div>
-    <div class="clear"></div>
-</div>
-
-<!-- HAKUKOHDEKOODIEN LISÄYS -->
-<div class="form-row" ng-show="model.valintaryhma.oid" auth="update">
-    <label class="form-row-label">Lisää hakukohdekoodeja</label>
-
-    <div class="form-row-content width-60">
-
-        <div filterable-list ng-if="toggleHakukohdeKoodit" class="autocomplete">
-            <div class="form-row">
-                <button type="button" class="btn btn-sm btn-default" ng-click="addHakukohdeUri(selectedId)"
-                        ng-disabled="!selectedId"><i class="fa fa-plus"></i> Hakukohdekoodi
-                </button>
-            </div>
-
-            <div class="ac-selection">
-                <h3 class="margin-top-0">Valittu hakukohdekoodi: {{selectedId}}</h3>
-            </div>
-
-            <input class="width-60 ac-filter search" type="text" placeholder="Suodata hakukohdekoodeja"
-                   ng-model="hakukohdekoodifilter"/>
-
-            <ul class="ac-options" ng-show="model.hakukohdekoodit">
-                <li fl-option="{{hakukohdekoodi.koodiUri}}" class="ac-option" ng-click="setHakukohdeUri()"
-                    ng-repeat="hakukohdekoodi in model.hakukohdekoodit | filter:hakukohdekoodifilter | hakukohdekoodiFullMatchFilter">
-                    <span>{{hakukohdekoodi.metadata[0].nimi}}</span>
-                    <span class="float-right">{{hakukohdekoodi.koodiUri}}</span>
-                </li>
-            </ul>
-
-        </div>
-        <button ng-click="showHakukohdeKoodit()" ng-model="showHakukohdekoodit" type="button"
-                class="btn btn-sm btn-default">
-            <span ng-show="!toggleHakukohdeKoodit"><i class="fa fa-eye"></i> Hakukohdekoodit</span>
-            <span ng-show="toggleHakukohdeKoodit"><i class="fa fa-eye-slash"></i> Hakukohdekoodit</span>
-        </button>
-
-
     </div>
     <div class="clear"></div>
 </div>
