--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -25,6 +25,9 @@
     <script type="text/javascript" src="routes.js"></script>
     <script type="text/javascript" src="valintaryhmalistaus/valintaryhmaHakukohdeTree.js"></script>
     <script type="text/javascript" src="valintaryhma/valintaryhma.js"></script>
+    <script type="text/javascript" src="valintaryhma/valintakoekoodit.js"></script>
+    <script type="text/javascript" src="valintaryhma/hakukohdekoodit.js"></script>
+
     <script type="text/javascript" src="valintaryhma/valintaryhma_uusi.js"></script>
     <script type="text/javascript" src="laskentakaavaModel.js"></script>
     <script type="text/javascript" src="hakijaryhma/hakijaryhma.js"></script>
