luonnos-tieto poistettu laskentakaavalistoista

--- a/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
@@ -84,7 +84,7 @@
                         <td>
                             {{kaava.kuvaus}}
                         </td>
-                        <td>
+                        <td>{{kaava}}
                             <a ng-click="editKaava(kaava)"><i class="fa fa-pencil"></i></a>
                         </td>
                     </tr>
