organisaation liittäminen valintaryhmään refaktoroitu käyttämään bootstrapin modal-ikkunaa

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -37,7 +37,7 @@
     <script type="text/javascript" src="valinnanvaihe/hakukohdevalinnanvaihe.js"></script>
     <script type="text/javascript" src="valintatapajono/valintatapajono.js"></script>
     <script type="text/javascript" src="jarjestyskriteeri/jarjestyskriteeri.js"></script>
-    <script type="text/javascript" src="organisaatio.js"></script>
+    <script type="text/javascript" src="valintaryhma/organisaatio.js"></script>
     <script type="text/javascript" src="../common/js/directives.js"></script>
     <script type="text/javascript" src="../common/js/modal.js"></script>
     <script type="text/javascript" src="../common/js/filters.js"></script>
