--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -76,10 +76,10 @@
 </div>
 
 <!-- VALINTAKOEKOODIEN LISTAUS -->
-<div ng-include="'valintaryhma/valintakoekoodit.html'" ng-controller="ValintakoekoodiController" class="form-row"></div>
+<div ng-include="'valintaryhma/valintakoekoodit.html'" class="form-row"></div>
 
 <!-- HAKUKOHDEKOODIEN LISTAUS -->
-<div ng-include="'valintaryhma/hakukohdekoodit.html'" ng-controller="HakukohdekoodiController" class="form-row"></div>
+<div ng-include="'valintaryhma/hakukohdekoodit.html'" class="form-row"></div>
 
 <!-- VALINNANVAIHEIDEN LISTAUS -->
 <div class="form-row width-100">
